--- a/backend/package.json
+++ b/backend/package.json
@@ -4,9 +4,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "build": "pip3 install -r requirements.txt",
-    "postinstall": "pip3 install -r requirements.txt"
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
