--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,9 +1,10 @@
 FROM node:18-slim
 
-# Install Python and system dependencies
+# Install Python and virtual environment support
 RUN apt-get update && apt-get install -y \
     python3 \
-    python3-pip \
+    python3-venv \
+    python3-dev \
     ffmpeg \
     && rm -rf /var/lib/apt/lists/*
 
@@ -13,12 +14,20 @@ WORKDIR /app
 COPY package*.json ./
 RUN npm ci
 
-# Copy and install Python dependencies  
+# Create Python virtual environment
+RUN python3 -m venv venv
+
+# Upgrade pip in virtual environment
+RUN ./venv/bin/pip install --upgrade pip
+
+# Copy and install Python dependencies in virtual environment
 COPY requirements.txt ./
-RUN pip3 install -r requirements.txt
+RUN ./venv/bin/pip install -r requirements.txt
 
 # Copy application code
 COPY . .
 
 EXPOSE 5000
+
+# Start the application (Node.js doesn't need venv)
 CMD ["node", "server.js"]
