--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,12 +1,27 @@
 FROM node:18-slim
 
-# Install Python and virtual environment support
+# Install Python, system dependencies, and build tools INCLUDING libsndfile1
 RUN apt-get update && apt-get install -y \
     python3 \
     python3-venv \
     python3-dev \
     ffmpeg \
+    curl \
+    build-essential \
+    gcc \
+    libffi-dev \
+    libssl-dev \
+    pkg-config \
+    git \
+    ca-certificates \
+    libsndfile1 \
     && rm -rf /var/lib/apt/lists/*
+
+# Install Rust using official installer
+RUN curl https://sh.rustup.rs -sSf | sh -s -- -y
+
+# Update PATH to include Rust binaries
+ENV PATH="/root/.cargo/bin:$PATH"
 
 WORKDIR /app
 
@@ -28,6 +43,4 @@ RUN ./venv/bin/pip install -r requirements.txt
 COPY . .
 
 EXPOSE 5000
-
-# Start the application (Node.js doesn't need venv)
 CMD ["node", "server.js"]
