--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,27 +1,13 @@
 FROM node:18-slim
 
-# Install Python, system dependencies, and build tools INCLUDING libsndfile1
+# Install Python, system dependencies, and build tools
 RUN apt-get update && apt-get install -y \
     python3 \
     python3-venv \
     python3-dev \
     ffmpeg \
-    curl \
-    build-essential \
-    gcc \
-    libffi-dev \
-    libssl-dev \
-    pkg-config \
-    git \
-    ca-certificates \
     libsndfile1 \
     && rm -rf /var/lib/apt/lists/*
-
-# Install Rust using official installer
-RUN curl https://sh.rustup.rs -sSf | sh -s -- -y
-
-# Update PATH to include Rust binaries
-ENV PATH="/root/.cargo/bin:$PATH"
 
 WORKDIR /app
 
@@ -32,12 +18,12 @@ RUN npm ci
 # Create Python virtual environment
 RUN python3 -m venv venv
 
-# Upgrade pip in virtual environment
-RUN ./venv/bin/pip install --upgrade pip
+# Upgrade pip and install wheel support
+RUN ./venv/bin/pip install --upgrade pip wheel setuptools
 
-# Copy and install Python dependencies in virtual environment
+# Copy and install Python dependencies with prefer-binary flag
 COPY requirements.txt ./
-RUN ./venv/bin/pip install -r requirements.txt
+RUN ./venv/bin/pip install --prefer-binary --no-cache-dir -r requirements.txt
 
 # Copy application code
 COPY . .
