--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,8 @@
 torch==2.0.1
 torchvision==0.15.2
 torchaudio==2.0.2
-transformers==4.21.0
+transformers==4.35.0
+tokenizers==0.15.0
 openai-whisper==20231117
 yt-dlp==2023.7.6
 opencv-python==4.8.0.74
