--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,29 +1,34 @@
 FROM node:18-slim
 
-# Install Python, system dependencies, and build tools
+# Install dependencies and clean up in same layer
 RUN apt-get update && apt-get install -y \
-    python3 \
-    python3-venv \
-    python3-dev \
-    ffmpeg \
-    libsndfile1 \
-    && rm -rf /var/lib/apt/lists/*
+    python3 python3-venv python3-dev \
+    ffmpeg libsndfile1 \
+    build-essential gcc \
+    && rm -rf /var/lib/apt/lists/* \
+    && apt-get autoremove -y \
+    && apt-get autoclean
 
 WORKDIR /app
 
-# Copy and install Node.js dependencies
+# Install Node.js dependencies
 COPY package*.json ./
-RUN npm ci
+RUN npm ci --only=production && npm cache clean --force
 
-# Create Python virtual environment
+# Create Python environment
 RUN python3 -m venv venv
+RUN ./venv/bin/pip install --upgrade pip --no-cache-dir
 
-# Upgrade pip and install wheel support
-RUN ./venv/bin/pip install --upgrade pip wheel setuptools
-
-# Copy and install Python dependencies with prefer-binary flag
+# Install Python packages and remove cache
 COPY requirements.txt ./
-RUN ./venv/bin/pip install --prefer-binary --no-cache-dir -r requirements.txt
+RUN ./venv/bin/pip install --prefer-binary --no-cache-dir -r requirements.txt \
+    && find /app/venv -name "*.pyc" -delete \
+    && find /app/venv -name "__pycache__" -delete
+
+# Remove build dependencies after installation
+RUN apt-get remove -y build-essential gcc python3-dev \
+    && apt-get autoremove -y \
+    && apt-get autoclean
 
 # Copy application code
 COPY . .
