--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,11 +1,13 @@
-torch==2.0.1
-torchvision==0.15.2
-torchaudio==2.0.2
+# Lighter alternatives
+torch==2.0.1+cpu
+torchvision==0.15.2+cpu
+torchaudio==2.0.2+cpu
 transformers==4.35.0
 tokenizers==0.14.1
 openai-whisper==20231117
 yt-dlp==2023.7.6
-opencv-python==4.8.0.74
+opencv-python-headless==4.8.0.74  # Headless version (smaller)
 numpy==1.24.3
 Pillow==9.5.0
 soundfile>=0.12.1
+--extra-index-url https://download.pytorch.org/whl/cpu
