--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,7 +4,8 @@ FROM node:18-slim
 RUN apt-get update && apt-get install -y \
     python3 python3-venv python3-dev \
     ffmpeg libsndfile1 \
-    curl wget \
+    curl wget git build-essential \
+    libssl-dev libffi-dev ca-certificates \
     && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
