--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,6 +10,7 @@ numpy==1.24.3
 Pillow==9.5.0
 soundfile>=0.12.1
 yt-dlp>=2024.06.10
+psutil>=5.9.0
 yt-dlp-get-pot
 bgutil-ytdlp-pot-provider
 --extra-index-url https://download.pytorch.org/whl/cpu
