--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,6 +12,7 @@ soundfile>=0.12.1
 yt-dlp>=2024.06.10
 psutil>=5.9.0
 requests>=2.28.0
+urllib3>=1.26.0
 yt-dlp-get-pot
 bgutil-ytdlp-pot-provider
 --extra-index-url https://download.pytorch.org/whl/cpu
